force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__AcademicSessionSeason__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicSessionSeason__c</fullName>
    <label>Season</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicSessionSeason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>