force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__AddDropDeadlineDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AddDropDeadlineDateTime__c</fullName>
    <label>Add Drop Deadline Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AddDropDeadlineDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>