force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__AuditDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__AuditDueDateTime__c</fullName>
    <label>Audit Due Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AuditDueDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>