force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__ClassEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClassEndDateTime__c</fullName>
    <label>Class End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClassEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>