force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__ClassStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClassStartDateTime__c</fullName>
    <label>Class Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClassStartDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>