force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__CourseWithdrawDeadlineDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__CourseWithdrawDeadlineDateTime__c</fullName>
    <label>Course Withdraw Deadline</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CourseWithdrawDeadlineDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>