force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__ExamEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExamEndDateTime__c</fullName>
    <label>Exam End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExamEndDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>