force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__rel_1719817603066_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817603066_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcademicSession_AcademicTermId_map_A_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>AcademicSession_AcademicTermId_map_A_rel</relationshipLabel>
    <relationshipName>rel_1719817603066_end</relationshipName>
    <type>Lookup</type>
</CustomField>