force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__ResultAvailabilityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResultAvailabilityDateTime__c</fullName>
    <label>ResultAvailabilityDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResultAvailabilityDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>