force-app/main/default/objects/ssot__AcademicSession__dlm/fields/ssot__ResultDueDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResultDueDateTime__c</fullName>
    <label>ResultDueDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResultDueDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>